--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "concurrently": "^5.3.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2"
   }
 }
