--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,9 @@
 {
-  "singleQuote": true
+  "singleQuote": true,
+  "arrowParens": "avoid",
+  "jsxBracketSameLine": true,
+  "printWidth": 120,
+  "semi": false,
+  "tabWidth": 2,
+  "trailingComma": "es5"
 }
