--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "react-scripts": "5.0.1",
+    "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
