--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "tailwindcss": "^3.4.3"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.0",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2"
   }
